Fixed form component internal submit error, validation error.

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -95,7 +95,7 @@
         <h1>Forms Builder</h1>
     </section>
     <section class="content">
-        <ods-form-builder schema="schema" debug-mode="true"></ods-form-builder>
+        <ods-form-builder schema="schemaTest" debug-mode="true"></ods-form-builder>
     </section>
 
 </div>
