--- a/examples/select-filtered/index.html
+++ b/examples/select-filtered/index.html
@@ -61,8 +61,8 @@
                     <div class="form-group" ng-class="{'has-error': example.workingWeeks.$invalid}">
                         <select-filtered ng-model="selectdWorkingWeek" label="Working Weeks" name="workingWeeks"
                                          placeholder="Select a working week..." ng-required="required"
-                                         list="list" filters="filters" tooltip="Working Weeks"
-                                         on-select="onSelect()"></select-filtered>
+                                         list="list" filters="filters" tooltip="Working Weeks" on-select="onSelect()"
+                                         render-style="renderStyle" render="render"></select-filtered>
                         <div ng-show="example.workingWeeks.$invalid">
                             <p class="help-block" ng-show="example.workingWeeks.$error.uiSelectRequired">
                                 Field required!!!
@@ -82,10 +82,10 @@
                 <br>
             </div>
             <!--<div class="row">-->
-                <!--<div class="col-lg-12">-->
-                    <!--<button type="submit" class="btn btn-success" ng-click="toggleRequired()">Toggle Required</button>-->
-                    <!--<button type="submit" class="btn btn-default" ng-click="toggleDisabled()">Toggle Disabled</button>-->
-                <!--</div>-->
+            <!--<div class="col-lg-12">-->
+            <!--<button type="submit" class="btn btn-success" ng-click="toggleRequired()">Toggle Required</button>-->
+            <!--<button type="submit" class="btn btn-default" ng-click="toggleDisabled()">Toggle Disabled</button>-->
+            <!--</div>-->
             <!--</div>-->
         </form>
     </div>
