--- a/examples/index.html
+++ b/examples/index.html
@@ -52,6 +52,7 @@
                         <li><a href="reports/index.html">Reports Viewer directive</a></li>
                         <li><a href="img-upload/index.html">Image Upload (Crop editing) directive</a></li>
                         <li><a href="select-filtered/index.html">Bootstrap Select directive with dynamic filter</a></li>
+                        <li><a href="hide-value/index.html">Hide input value</a></li>
                         <!--<li><a href="#">Another action</a></li>-->
                         <!--<li><a href="#">Something else here</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
