--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -25,9 +25,9 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
-    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
     <link rel="stylesheet" href="../dist/wizard-steps/style.css">
+    <link rel="stylesheet" href="../dist/reports/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -126,6 +126,7 @@
 <script src="../bower_components/ui-cropper/compile/minified/ui-cropper.js"></script>
 <script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
 <script src="../bower_components/pdf.js-viewer/pdf.js"></script>
+<script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
