Updated readme and doc files.

--- a/examples/index.html
+++ b/examples/index.html
@@ -86,12 +86,12 @@
                     Field components can be dragged from a field toolbar onto a canvas, you can add fields validations.
                     Ease way to extend by adding custom field components and validation patterns.</li>
                 <li><b>CKEditor Directive:</b> It is a CKEditor directive.</li>
-                <li><b>JSignature Directive:</b> AngularJs Directive for jSignature library.</li>
                 <li><b>Address Directive:</b> Useful directive that allow to have an address management adding an input group field. It open a modal windows where you
                     can handle all address fields.</li>
                 <li><b>Image Upload (Crop editing) Directive:</b> Useful directive that allow to upload images(profile images, logo images) with crop support.</li>
                 <li><b>Report Viewer Directive:</b> Report Viewer directive that allow to parametrize and visualize reports include report params.</li>
                 <li><b>Bootstrap Select with Filter Support Directive:</b> Select directive with dynamic filter support.</li>
+                <li><b>Bootstrap Hide value Directive:</b> Useful directive for SSN, Medicaid and Medicare number that need privacy with a mask.</li>
             </ul>
         </section>
     </div>
