--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -25,8 +25,8 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
-    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
+    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/wizard-steps/style.css">
     <!-- endinject -->
     <!-- endbuild -->
@@ -173,6 +173,7 @@
 <script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
 <script src="../bower_components/pdf.js-viewer/pdf.js"></script>
 <script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
+<script src="../bower_components/lodash/lodash.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
