--- a/examples/wizard-steps/index.html
+++ b/examples/wizard-steps/index.html
@@ -81,6 +81,7 @@
 <script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
 <script src="../bower_components/pdf.js-viewer/pdf.js"></script>
 <script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
+<script src="../bower_components/lodash/lodash.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
