--- a/examples/img-upload/index.html
+++ b/examples/img-upload/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
     <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
     <link rel="stylesheet" href="../bower_components/ui-cropper/compile/minified/ui-cropper.css">
+    <link rel="stylesheet" href="../bower_components/json-formatter/dist/json-formatter.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
@@ -139,6 +140,7 @@
 <script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
 <script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
 <script src="../bower_components/lodash/lodash.js"></script>
+<script src="../bower_components/json-formatter/dist/json-formatter.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
