Add color property to select option

--- a/examples/select-filtered/index.html
+++ b/examples/select-filtered/index.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
     <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
     <link rel="stylesheet" href="../bower_components/ui-cropper/compile/minified/ui-cropper.css">
+    <link rel="stylesheet" href="../bower_components/json-formatter/dist/json-formatter.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
-    <link rel="stylesheet"
-          href="../bower_components/angular-datatables/dist/plugins/bootstrap/datatables.bootstrap.min.css">
+    <link rel="stylesheet" href="../bower_components/angular-datatables/dist/plugins/bootstrap/datatables.bootstrap.min.css">
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
@@ -101,10 +101,8 @@
 <script src="../bower_components/jSignature/src/plugins/jSignature.CompressorBase30.js"></script>
 <script src="../bower_components/jSignature/src/plugins/jSignature.CompressorSVG.js"></script>
 <script src="../bower_components/jSignature/src/plugins/jSignature.UndoButton.js"></script>
-<script src="../bower_components/webcam-directive/dist/webcam.min.js"></script>
 <script src="../bower_components/angular-ui-select/dist/select.js"></script>
 <script src="../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
-<script src="../bower_components/underscore/underscore.js"></script>
 <script src="../bower_components/angular-confirm/dist/angular-confirm.min.js"></script>
 <script src="../bower_components/angular-translate/angular-translate.js"></script>
 <script src="../bower_components/angular-jquery/dist/angular-jquery.js"></script>
@@ -116,6 +114,9 @@
 <script src="../bower_components/pdfmake/build/vfs_fonts.js"></script>
 <script src="../bower_components/ui-cropper/compile/minified/ui-cropper.js"></script>
 <script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
+<script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
+<script src="../bower_components/lodash/lodash.js"></script>
+<script src="../bower_components/json-formatter/dist/json-formatter.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
