--- a/examples/address/index.html
+++ b/examples/address/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
     <link rel="stylesheet" href="../bower_components/ui-cropper/compile/minified/ui-cropper.css">
     <link rel="stylesheet" href="../bower_components/json-formatter/dist/json-formatter.css">
+    <link rel="stylesheet" href="../bower_components/angular-colorpicker-directive/css/color-picker.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
@@ -80,6 +81,7 @@
 <script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
 <script src="../bower_components/lodash/lodash.js"></script>
 <script src="../bower_components/json-formatter/dist/json-formatter.js"></script>
+<script src="../bower_components/angular-colorpicker-directive/js/color-picker.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
