--- a/examples/ckeditor/index.html
+++ b/examples/ckeditor/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
     <link rel="stylesheet" href="../bower_components/ui-cropper/compile/minified/ui-cropper.css">
     <link rel="stylesheet" href="../bower_components/json-formatter/dist/json-formatter.css">
+    <link rel="stylesheet" href="../bower_components/angular-colorpicker-directive/css/color-picker.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
@@ -24,8 +25,8 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
-    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
+    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/wizard-steps/style.css">
     <!-- endinject -->
     <!-- endbuild -->
@@ -103,6 +104,7 @@
 <script src="../bower_components/angular-ui-mask/dist/mask.js"></script>
 <script src="../bower_components/lodash/lodash.js"></script>
 <script src="../bower_components/json-formatter/dist/json-formatter.js"></script>
+<script src="../bower_components/angular-colorpicker-directive/js/color-picker.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
